# Cute-SEAL

./: ReadMe.md  demo.ipynb  test-tensorflow.py  test-torch.py
MS-SEAL/: CMakeLists.txt  ReadMe.md  env_set.md  test_BFV.cpp  test_BFV.hpp
